trying to fix shift

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -2409,12 +2409,13 @@ figcaption {
     aspect-ratio: 1.25 / 1;
     width: 100%;
     max-width: 100vw;
+    height: auto;
     overflow: hidden;
   }
 
   .hero-img img {
     width: 100%;
-    height: 100%;
+    height: auto;
     min-height: 2vh;
     object-fit: cover;
     display: block;
